--- a/wp7-donor/Donor/EventPage.xaml
+++ b/wp7-donor/Donor/EventPage.xaml
@@ -84,7 +84,7 @@
                     <StackPanel Name="ReminderStackPanel">
 					<StackPanel Orientation="Horizontal" Margin="0,10,0,0"
 					>
-                            <TextBlock Text="{Binding RememberBefore, Source={StaticResource Loc}}" 
+                            <TextBlock Text="{Binding ReminderBeforeEdit, Source={StaticResource Loc}}" 
                     Foreground="#FFDF8D4B"
 					Style="{StaticResource Text36pxB9A194}"
 					TextWrapping="Wrap"/>
@@ -94,25 +94,21 @@
 					</StackPanel>
 
                         <Grid>
-                            <Grid.ColumnDefinitions>     <ColumnDefinition Width="200"/>     <ColumnDefinition Width="*"/>
-</Grid.ColumnDefinitions>
-
+                            <!--<Grid.ColumnDefinitions>     
+                                <ColumnDefinition Width="200"/>     
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
-<RowDefinition Height="*"/>
-<RowDefinition Height="*"/>
-</Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
 
-                            <TextBlock Style="{StaticResource Text24pxDF8D4B}" Text="{Binding BeforeTime, Source={StaticResource Loc}}" Grid.Column="0" Grid.Row="0" />                      
+                            <TextBlock Style="{StaticResource Text24pxDF8D4B}" Text="{Binding BeforeTime, Source={StaticResource Loc}}" Grid.Column="0" Grid.Row="0" /> -->
                             <TextBlock 
 					Style="{StaticResource Text24pxC0A89A}" Grid.Column="1" Grid.Row="0"
 					Text="{Binding Path=Reminder}" 
 					Name="Reminder" TextWrapping="Wrap"/>
 
-                            <!--<TextBlock Style="{StaticResource Text24pxDF8D4B}" Text="Узнать результат" Grid.Column="0" Grid.Row="1" />
-                            <TextBlock 
-					Style="{StaticResource Text24pxC0A89A}" Grid.Column="1" Grid.Row="1"
-					Text="{Binding Path=Reminder}" 
-					TextWrapping="Wrap"/>-->
                         </Grid>
                             
                     </StackPanel>
