--- a/wp7-donor/Donor/NewsPage.xaml
+++ b/wp7-donor/Donor/NewsPage.xaml
@@ -18,7 +18,7 @@
 
 	<phone:PhoneApplicationPage.ApplicationBar>
 		<shell:ApplicationBar BackgroundColor="#FF211E1D" ForegroundColor="White">
-			<shell:ApplicationBarIconButton x:Name="ShareButton" IconUri="/icons/appbar.share.rest.png" Text="Поделиться" Click="ShareButton_Click"/>
+            <shell:ApplicationBarIconButton x:Name="ShareButton" IconUri="/icons/appbar.share.rest.png" Text="{Binding Share, Source={StaticResource Loc}}" Click="ShareButton_Click"/>
 		</shell:ApplicationBar>
 	</phone:PhoneApplicationPage.ApplicationBar>
 
