--- a/wp7-donor/Donor/HelpPage.xaml
+++ b/wp7-donor/Donor/HelpPage.xaml
@@ -130,9 +130,7 @@ ScrollViewer.VerticalScrollBarVisibility="Disabled">
                 <Grid Margin="0,30,0,0">                    
                     <StackPanel>
                         <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="0">
-                            <!--SelectionForeground="#FFFFFFFF"
-            				SelectionBackground="#FF1BA1E2"
-            				CaretBrush="#FFCBB2A3"-->
+
 							<toolkit:AutoCompleteBox Name="ContraSearchText" FilterMode="Contains" IsDropDownOpen="False" ValueMemberPath="Title" Foreground="#FFE0B390" Background="#FF3C1B00" BorderBrush="#FF3C1B00" Populating="StationsSearchText_Populating" Populated="ContraSearchText_Populated" LostFocus="ContraSearchText_LostFocus" IsTextCompletionEnabled="True">
                                 <!--<toolkit:AutoCompleteBox.ItemTemplate>
                                     <DataTemplate>
@@ -219,12 +217,12 @@ Visibility="Collapsed" ScrollViewer.VerticalScrollBarVisibility="Disabled">     
 							FontSize="24"
 							ScrollViewer.VerticalScrollBarVisibility="Disabled">
 
-• не&amp;nbsp;употребляли алкоголь за&amp;nbsp;последние 48 часов;&lt;br/&gt;
-• не&amp;nbsp;принимали анальгетики за&amp;nbsp;последние 72 часа;&lt;br/&gt;
+• вы не&amp;nbsp;употребляли алкоголь за&amp;nbsp;последние 48 часов;&lt;br/&gt;
+• вы не&amp;nbsp;принимали анальгетики за&amp;nbsp;последние 72 часа;&lt;br/&gt;
 • для женщин: после окончания менструации прошло 5 дней;&lt;br/&gt;
 • вам не&amp;nbsp;удаляли зуб за&amp;nbsp;последние 10 дней;&lt;br/&gt;
-• не&amp;nbsp;принимали антибиотики за&amp;nbsp;последние 2 недели;&lt;br/&gt;
-• не&amp;nbsp;болели ангиной, гриппом, ОРВИ за&amp;nbsp;последний месяц;&lt;br/&gt;
+• вы не&amp;nbsp;принимали антибиотики за&amp;nbsp;последние 2 недели;&lt;br/&gt;
+• вы не&amp;nbsp;болели ангиной, гриппом, ОРВИ за&amp;nbsp;последний месяц;&lt;br/&gt;
 • у&amp;nbsp;вас не&amp;nbsp;было обострения аллергии за&amp;nbsp;последние 2&amp;nbsp;месяца.&lt;/li&gt;
 &lt;br/&gt;
                             </msp:HTMLViewer>
