--- a/wp7-donor/Donor/ProfileLogin.xaml
+++ b/wp7-donor/Donor/ProfileLogin.xaml
@@ -31,73 +31,76 @@
 				 IsIndeterminate="False" Width="460" Name="LoadingBar" />
                     <TextBlock 
 					Style="{StaticResource Text24pxWhite}" 
-					Text="профиль"/>   
+					Text="{Binding ProfileHeader, Source={StaticResource Loc}}"/>   
                 </StackPanel>
             </controls:Pivot.Title>
             <!--Pivot item one-->
             <controls:PivotItem Margin="12,35,12,0">
                 <controls:PivotItem.Header>
                     <TextBlock Style="{StaticResource Text70pxWhite}" 
-					Text="аккаунт" Margin="0,30,0,0"/>
+					Text="{Binding AccountHeader, Source={StaticResource Loc}}" Margin="0,30,0,0"/>
                 </controls:PivotItem.Header>
                 <Grid>
                     <StackPanel Name="EditProfile" Visibility="Collapsed">
-                        <TextBlock Text="Имя" Margin="10,5,10,0"
+                        <TextBlock Text="{Binding Name, Source={StaticResource Loc}}" Margin="10,5,10,0"
 					Style="{StaticResource Text24pxCBB2A3}"/>
                     <TextBox Name="EditName" 
 					Style="{StaticResource TextBoxStyle1}"	
 					Text="{Binding Path=App.ViewModel.User.Name, 
 					Mode=TwoWay}" />
-                        <TextBlock Text="Пол" Margin="10,0,10,0"
+                        <TextBlock Text="{Binding Sex, Source={StaticResource Loc}}" Margin="10,0,10,0"
 						Style="{StaticResource Text24pxCBB2A3}"/>
                         <StackPanel Orientation="Horizontal" 
 						Name="SexEditGroup">
-                            <RadioButton 
-							Content="Мужской" Name="EditMale" 
-							Foreground="#FFCBB2A3" />
-                            <RadioButton Content="Женский"
-							
-							Name="EditFemale" DataContext="{Binding}" 
-							Foreground="#FFCBB2A3" />
+                            <toolkit:WrapPanel ItemHeight="90" ItemWidth="210" Margin="10,0,10,0">
+                                <RadioButton 
+							    Content="{Binding Male, Source={StaticResource Loc}}" Name="EditMale" 
+							    Foreground="#FFCBB2A3" />
+                                <RadioButton Content="{Binding Female, Source={StaticResource Loc}}"
+							    Name="EditFemale" DataContext="{Binding}" 
+							    Foreground="#FFCBB2A3" />
+                            </toolkit:WrapPanel>
                         </StackPanel>
 
-                        <TextBlock Text="Группа крови" Margin="10,0,10,0"
+                        <TextBlock Text="{Binding BloodGroup, Source={StaticResource Loc}}" Margin="10,0,10,0"
 						Style="{StaticResource Text24pxCBB2A3}" />
                         <StackPanel VerticalAlignment="Top" HorizontalAlignment="Left">
-                        <toolkit:WrapPanel ItemHeight="90" ItemWidth="210" Name="BloudTypeGroupEdit" VerticalAlignment="Top" HorizontalAlignment="Left" Height="160">
-                            <RadioButton Content="O(I)" 
+                            <toolkit:WrapPanel ItemHeight="90" Margin="10,0,10,0" ItemWidth="210" Name="BloudTypeGroupEdit" VerticalAlignment="Top" HorizontalAlignment="Left" Height="160">
+                            <RadioButton Content="{Binding FirstBloodGroup, Source={StaticResource Loc}}" 
 							Foreground="#FFCBB2A3"
 							Name="o" Height="75" VerticalAlignment="Top" />
                             <RadioButton 
 							Foreground="#FFCBB2A3"
-							Content="A(II)" Name="a" Height="75" VerticalAlignment="Top" />            
+							Content="{Binding SecondBloodGroup, Source={StaticResource Loc}}" Name="a" Height="75" VerticalAlignment="Top" />            
                         
                             <RadioButton 
-							Content="B(III)" 
+							Content="{Binding ThirdBloodGroup, Source={StaticResource Loc}}" 
 							Foreground="#FFCBB2A3"
 							Name="b" Height="75" VerticalAlignment="Top" />
                             <RadioButton 
 							Foreground="#FFCBB2A3"
-							Content="AB(IV)" Name="ab" Height="75" VerticalAlignment="Top" />
+							Content="{Binding ForthBloodGroup, Source={StaticResource Loc}}" Name="ab" Height="75" VerticalAlignment="Top" />
                         </toolkit:WrapPanel>
                         </StackPanel>
 
-                        <TextBlock Text="Резус-фактор" Margin="10,0,10,0"
+                        <TextBlock Text="{Binding RhFactor, Source={StaticResource Loc}}" Margin="10,0,10,0"
 						Style="{StaticResource Text24pxCBB2A3}"/>
                         <StackPanel Orientation="Horizontal" Name="RHedit">
-                            <RadioButton Content="RH+" 
-							Foreground="#FFCBB2A3"
-							Name="EditRHpl" />
-                            <RadioButton Content="RH-" 
-							Foreground="#FFCBB2A3"
-							Name="EditRHd" DataContext="{Binding}" />
+                            <toolkit:WrapPanel Margin="10,0,10,0" ItemHeight="90" ItemWidth="210"> 
+                                <RadioButton Content="RH+" 
+							    Foreground="#FFCBB2A3"
+							    Name="EditRHpl" />
+                                <RadioButton Content="RH-" 
+							    Foreground="#FFCBB2A3"
+							    Name="EditRHd" DataContext="{Binding}" />
+                            </toolkit:WrapPanel>
                         </StackPanel>
                     </StackPanel>
                     <StackPanel Margin="0,10" Name="UserProfile" Visibility="Collapsed">
                         <StackPanel Margin="10,0,10,0">
                             <TextBlock
 							Style="{StaticResource Text36pxCBB2A3}"
-							Text="Имя" TextWrapping="Wrap"/>
+							Text="{Binding Name, Source={StaticResource Loc}}" TextWrapping="Wrap"/>
                             <TextBlock Text="{Binding User.Name}" 
 							Name="ProfileName" TextWrapping="Wrap" 
 							Margin="12,-6,12,0" 
@@ -105,7 +108,7 @@
 							/>
                         </StackPanel>
                         <StackPanel Margin="10">
-                            <TextBlock Text="Пол" TextWrapping="Wrap" 
+                            <TextBlock Text="{Binding Sex, Source={StaticResource Loc}}" TextWrapping="Wrap" 
 							Style="{StaticResource Text36pxCBB2A3}"/>
                             <TextBlock Name="ProfileSex" 
 							Text="{Binding User.Sex}"  
@@ -113,7 +116,7 @@
 							Style="{StaticResource Text24pxDF8D4B}"/>
                         </StackPanel>
                         <StackPanel Margin="10">
-                            <TextBlock Text="Группа крови" 
+                            <TextBlock Text="{Binding BloodGroup, Source={StaticResource Loc}}" 
 							TextWrapping="Wrap" 
 							Style="{StaticResource Text36pxCBB2A3}"/>
                             <TextBlock Text="{Binding User.OutBloodDataString}" 
@@ -122,12 +125,12 @@
 							Style="{StaticResource Text24pxDF8D4B}"/>
                         </StackPanel>
                         <StackPanel Margin="10">
-                            <TextBlock Text="Записано кроводач" TextWrapping="Wrap" Style="{StaticResource Text36pxCBB2A3}"/>
+                            <TextBlock Text="{Binding NextBloodGive, Source={StaticResource Loc}}" TextWrapping="Wrap" Style="{StaticResource Text36pxCBB2A3}"/>
                             <TextBlock Text="{Binding User.GivedBlood}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource Text24pxDF8D4B}"/>
                         </StackPanel>
 
                         <StackPanel Margin="10">
-                            <TextBlock Text="Следующая кроводача" TextWrapping="Wrap" Style="{StaticResource Text36pxCBB2A3}"/>
+                            <TextBlock Text="{Binding GivedBloodCount, Source={StaticResource Loc}}" TextWrapping="Wrap" Style="{StaticResource Text36pxCBB2A3}"/>
                             <TextBlock Text="{Binding User.NearestBloodGive}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource Text24pxDF8D4B}"/>
                         </StackPanel>
 
@@ -138,30 +141,30 @@
                     		<StackPanel>
                         <TextBlock Margin="10,10,10,0"
 						Style="{StaticResource Text24pxCBB2A3}"
-						Text="E-mail" />
+						Text="{Binding EmailHelp, Source={StaticResource Loc}}" />
                         <TextBox x:Name="email1" Style="{StaticResource TextBoxStyle1}" Text="" />
                         <TextBlock Margin="10,0,10,0"
 						Style="{StaticResource Text24pxCBB2A3}"
-						Text="Пароль" />
+						Text="{Binding Password, Source={StaticResource Loc}}" />
                         <PasswordBox 
 						x:Name="password1" Password="" Style="{StaticResource PasswordBoxStyle1}"/>
                         <TextBlock Margin="10,0,10,0"
 						Style="{StaticResource Text24pxCBB2A3}"
-						Text="Подтвердите пароль" />
+						Text="{Binding ConfirmPassword, Source={StaticResource Loc}}" />
                         <PasswordBox  Style="{StaticResource PasswordBoxStyle1}"	
 						x:Name="password2" Password="" />
                                 <TextBlock Margin="10,0,10,0"
 						Style="{StaticResource Text24pxCBB2A3}"
-						Text="Имя" />
+						Text="{Binding Name, Source={StaticResource Loc}}" />
                         <TextBox x:Name="name1" Text="" 
 						Style="{StaticResource TextBoxStyle1}"/>
 
                                 <StackPanel Orientation="Horizontal" 
 						Name="SexEditGroupCreate">
                                     <RadioButton 
-							Content="Мужской" Name="CreateMale" 
+							Content="{Binding Male, Source={StaticResource Loc}}" Name="CreateMale" 
 							Foreground="#FFCBB2A3" />
-                                    <RadioButton Content="Женский"
+                                    <RadioButton Content="{Binding Female, Source={StaticResource Loc}}"
 							
 							Name="CreateFemale" DataContext="{Binding}" 
 							Foreground="#FFCBB2A3" />
@@ -172,23 +175,23 @@
 						Background="#FF4186A3" 
 						BorderBrush="#FF4186A3" 
 						FontFamily="Segoe WP Regular"
-						Content="Регистрация" Click="RegisterButton_Click" Foreground="White" />
+						Content="{Binding Registration, Source={StaticResource Loc}}" Click="RegisterButton_Click" Foreground="White" />
 						</StackPanel>
 						</ScrollViewer>
                     </StackPanel>
                     <StackPanel Name="LoginForm" Visibility="Visible">
-                        <TextBlock Text="Введите e-mail" Margin="10,10,0,0"
+                        <TextBlock Text="{Binding EnterEmail, Source={StaticResource Loc}}" Margin="10,10,0,0"
 						Style="{StaticResource Text24pxCBB2A3}"/>
                         <TextBox Background="#FF4F3B34" Style="{StaticResource TextBoxStyle1}"
 BorderBrush="#FF4F3B34" Foreground="#FFCBB2A3" x:Name="email" 
 						Text="" />
-                        <TextBlock Text="Введите пароль"  Margin="10,5,0,0"
+                        <TextBlock Text="{Binding EnterPassword, Source={StaticResource Loc}}"  Margin="10,5,0,0"
 						Style="{StaticResource Text24pxCBB2A3}" />
                         <PasswordBox Background="#FF4F3B34" 
 Style="{StaticResource PasswordBoxStyle1}" BorderBrush="#FF4F3B34" 	Foreground="#FFCBB2A3" x:Name="password" Password="" />
                         
                         <Button Name="Login" 
-						Content="Вход" 
+						Content="{Binding Login, Source={StaticResource Loc}}" 
 						Click="Login_Click"
 						FontSize="24"
 						Background="#FF4186A3" 
@@ -198,7 +201,7 @@ Style="{StaticResource PasswordBoxStyle1}" BorderBrush="#FF4F3B34" 	Foreground="
                         <TextBlock 
 						Foreground="#FF847168"
 						Style="{StaticResource Text24pxCBB2A3}"
-						Text="Если у вас нет аккаунта, введите пароль и e-mail для начала регистрации." TextWrapping="Wrap" Visibility="Collapsed" />
+						Text="{Binding EnterLoginAndPasswordToRegister, Source={StaticResource Loc}}" TextWrapping="Wrap" Visibility="Collapsed" />
 
                         <Button Name="RegisterShowButton" 
 						Content="Регистрация" 
@@ -209,11 +212,11 @@ Style="{StaticResource PasswordBoxStyle1}" BorderBrush="#FF4F3B34" 	Foreground="
                         <TextBlock 
 						Foreground="#FF847168"
 						Style="{StaticResource Text24pxCBB2A3}"
-						Text="Если у вас нет аккаунта, введите пароль и e-mail для начала регистрации." TextWrapping="Wrap" Visibility="Collapsed" />
+						Text="{Binding EnterLoginAndPasswordToRegister, Source={StaticResource Loc}}" TextWrapping="Wrap" Visibility="Collapsed" />
 
 
                         <Button Name="RestorePassword" 
-						Content="Восстановить пароль" 
+						Content="{Binding RestorePassoword, Source={StaticResource Loc}}" 
 						Click="RestorePassword_Click" 
 						FontSize="24"
 						Background="#FF4186A3" 
