--- a/wp7-donor/Donor/CalendarMonthPage.xaml
+++ b/wp7-donor/Donor/CalendarMonthPage.xaml
@@ -1,5 +1,4 @@
-﻿<phone:PhoneApplicationPage xmlns:my="clr-namespace:Donor.Controls"  
-    x:Class="Donor.CalendarMonthPage"
+﻿<phone:PhoneApplicationPage xmlns:my="clr-namespace:Donor.Controls"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -7,13 +6,44 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
-    FontFamily="{StaticResource PhoneFontFamilyNormal}"
     xmlns:WPExtensions="clr-namespace:WPExtensions;assembly=WPExtensions"
-    FontSize="{StaticResource PhoneFontSizeNormal}"
-    Foreground="{StaticResource PhoneForegroundBrush}"
+    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity" 
+    xmlns:el="clr-namespace:Microsoft.Expression.Interactivity.Layout;assembly=Microsoft.Expression.Interactions"  
+    x:Class="Donor.CalendarMonthPage"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
     shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded" BorderBrush="#FF271B16">
+
+    <phone:PhoneApplicationPage.Resources>
+        <Storyboard x:Name="ToLeft">
+        	<DoubleAnimation
+            Storyboard.TargetName="Calendar1"
+            Storyboard.TargetProperty="Left"
+            To="100" Duration="0:0:10" AutoReverse="True" />
+        </Storyboard>
+
+        <Storyboard x:Name="fadeIn">
+            <DoubleAnimation Storyboard.TargetName="Calendar1"
+                         Storyboard.TargetProperty="Opacity" From="0.0"
+                         To="1.0" Duration="0:0:1" />
+        </Storyboard>
+        <Storyboard x:Name="fadeOut">
+            <DoubleAnimation Storyboard.TargetName="Calendar1"
+                         Storyboard.TargetProperty="Opacity" From="1.0"
+                         To="0.0" Duration="0:0:1" />
+        </Storyboard>
+
+    </phone:PhoneApplicationPage.Resources>
+
+	<phone:PhoneApplicationPage.FontFamily>
+		<StaticResource ResourceKey="PhoneFontFamilyNormal"/>
+	</phone:PhoneApplicationPage.FontFamily>
+	<phone:PhoneApplicationPage.FontSize>
+		<StaticResource ResourceKey="PhoneFontSizeNormal"/>
+	</phone:PhoneApplicationPage.FontSize>
+	<phone:PhoneApplicationPage.Foreground>
+		<StaticResource ResourceKey="PhoneForegroundBrush"/>
+	</phone:PhoneApplicationPage.Foreground>
 
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
@@ -35,26 +65,6 @@
             </toolkit:NavigationOutTransition.Forward>
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
-
-    <phone:PhoneApplicationPage.Resources>
-        <Storyboard x:Name="ToLeft">
-        	<DoubleAnimation
-            Storyboard.TargetName="Calendar1"
-            Storyboard.TargetProperty="Left"
-            To="100" Duration="0:0:10" AutoReverse="True" />
-        </Storyboard>
-
-        <Storyboard x:Name="fadeIn">
-            <DoubleAnimation Storyboard.TargetName="Calendar1"
-                         Storyboard.TargetProperty="Opacity" From="0.0"
-                         To="1.0" Duration="0:0:1" />
-        </Storyboard>
-        <Storyboard x:Name="fadeOut">
-            <DoubleAnimation Storyboard.TargetName="Calendar1"
-                         Storyboard.TargetProperty="Opacity" From="1.0"
-                         To="0.0" Duration="0:0:1" />
-        </Storyboard>
-    </phone:PhoneApplicationPage.Resources>
 
 	<phone:PhoneApplicationPage.Background>
             <ImageBrush ImageSource="images/bg_04.png"/>
@@ -88,11 +98,17 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="0,0,0,0">
-            <my:MonthCalendar x:Name="Calendar1" Margin="0,0,0,0"/>
+            <StackPanel>
+                <my:MonthCalendar x:Name="Calendar1" Margin="0,0,0,0">
+                </my:MonthCalendar>
 
-            <WPExtensions:AdvancedApplicationBar Name="AppBar" IsVisible="True" IsMenuEnabled="False" Background="#FF211E1D" BackgroundColor="#FF211E1D" Foreground="White" BorderBrush="#FF211E1D" ForegroundColor="White" OpacityMask="White">
-                <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_undo.png" Text="{Binding Today, Source={StaticResource Loc}}" Name="TodayButton" Click="TodayButton_Click"/>
-                <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_add.png" Text="{Binding AddEvent, Source={StaticResource Loc}}" Visibility="Visible" Name="AddEventButton" Click="AddEventButton_Click" />
+                <!--<Button Content="FadeOut" Click="Button_Click" />
+                <Button Content="FadeIn" Click="Button_Click_1" />-->
+            </StackPanel>
+
+            <WPExtensions:AdvancedApplicationBar x:Name="AppBar" IsVisible="True" IsMenuEnabled="False" Background="#FF211E1D" BackgroundColor="#FF211E1D" Foreground="White" BorderBrush="#FF211E1D" ForegroundColor="White" OpacityMask="White">
+                <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_undo.png" Text="{Binding Today, Source={StaticResource Loc}}" x:Name="TodayButton" Click="TodayButton_Click"/>
+                <WPExtensions:AdvancedApplicationBarIconButton IconUri="/icons/ic_ApplicationBar_add.png" Text="{Binding AddEvent, Source={StaticResource Loc}}" Visibility="Visible" x:Name="AddEventButton" Click="AddEventButton_Click" />
 
             </WPExtensions:AdvancedApplicationBar>
         </Grid>
